# triton2-modbus

./: .gitignore  README.md  pyproject.toml
examples/: polynomal_calibration.py  polynomial_calibration.md  polynomial_calibration.py  scan_devices.py  simple_read.py  stream_read.py
src/triton2/: __init__.py  bits.py  client.py  codec.py  constants.py  exceptions.py  registers.py  scanner.py  stream.py
src/triton2_modbus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py  test_codec.py  test_scanner.py  test_stream.py
