[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton2-modbus"
version = "0.1.0"
description = "Python library for Triton2 capacitive level sensor via Modbus RTU"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = []
keywords = ["modbus", "triton2", "sensor", "rs485", "capacitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pymodbus[serial]>=3.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/user/triton2-modbus"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
